refactor: rest architeture

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,2 @@
 PORT="<NÚMERO DA PORTA DE LEVANTE DO SERVIDOR>"
-DB_USER="<USUÁRIO DE ACESSO AO BANCO DE DADOS>"
-DB_PASSWORD="<SENHA DE ACESSO AO BANCO DE DADOS>"
+DATABASE_URL="<URL DO BANCO DE DADOS PARA CONEXÃO>"
